<resources>
    <string name="app_name">SeremprePruebaTecnica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_data">Personal Data</string>
    <string name="address">Address</string>
    <string name="name">Name: %1$s</string>
    <string name="phone">Phone: %1$s</string>
    <string name="username">Username: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="street">Street: %1$s</string>
    <string name="zipcode">Zip Code: %1$s</string>
    <string name="city">City: %1$s</string>
    <string name="suite">Suite: %1$s</string>
    <string name="company">Company</string>
    <string name="bs">BS: %1$s</string>
    <string name="catchPhrase">Catch Phrase: %1$s</string>
    <string name="nameCompany">Name:  %1$s</string>
    <string name="refresh">Refresh</string>
    <string name="delete_all_posts">Delete All Posts</string>
    <string name="filter_favorites">Filter Favorites</string>
    <string name="all_favorites">All Favorites</string>
    <string name="Favorites">Favorites</string>
    <string name="all_posts">All Posts</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>