<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.example.seremprepruebatecnica.details.DetailsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/personalData_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_data"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />

            <LinearLayout
                android:id="@+id/name_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:layout_marginBottom="5dp"
                >

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@{String.format(@string/name, user.user.name)}"
                    tools:text="Name" />

                <TextView
                    android:id="@+id/user_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@{String.format(@string/phone, user.user.phone)}"
                    tools:text="Phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_phone">

                <TextView
                    android:id="@+id/user_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@{String.format(@string/username, user.user.username)}"
                    tools:text="username" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@{String.format(@string/email, user.user.email)}"
                    tools:text="email" />

            </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/addressCardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardUseCompatPadding="true"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/personalData_cardview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/street_zipcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:layout_marginBottom="5dp"
                    >

                    <TextView
                        android:id="@+id/user_street"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="@{String.format(@string/street, user.user.address.street)}"
                        tools:text="street" />

                    <TextView
                        android:id="@+id/user_zipCode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="@{String.format(@string/zipcode, user.user.address.zipcode)}"
                        tools:text="zipcode" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/street_zipcode">

                    <TextView
                        android:id="@+id/user_city"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="@{String.format(@string/city, user.user.address.city)}"
                        tools:text="city" />

                    <TextView
                        android:id="@+id/user_suite"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="@{String.format(@string/suite, user.user.address.suite)}"
                        tools:text="suite" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardUseCompatPadding="true"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/addressCardview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/nameCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:text="@{String.format(@string/nameCompany, user.user.company.name)}"
                    tools:text="suite" />

                <TextView
                    android:id="@+id/user_bs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:text="@{String.format(@string/bs, user.user.company.bs)}"
                    tools:text="city" />

                <TextView
                    android:id="@+id/catchPhrase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@{String.format(@string/catchPhrase, user.user.company.catchPhrase)}"
                    tools:text="city" />



            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>